# cu.rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  logger.rs  main.rs
src/consts/: mod.rs  modes.rs  packet_ids.rs  privileges.rs
src/events/: login.rs  misc.rs  mod.rs
src/objects/: player.rs
src/packets/: builders.rs  mod.rs  router.rs  rw.rs
src/web/: mod.rs  server.rs
