[package]
name = "cu_rs"
version = "0.1.0"
authors = ["RealistikDash <36131887+RealistikDash@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
ntex = "0.4.3"
futures = "0.3.17"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
maxminddb = "0.21.0"
